--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 
 /* FONTS */
-@import url('https://fonts.googleapis.com/css2?family=Anton&family=Bangers&family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Fredoka:wght@300..700&family=Gloria+Hallelujah&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pacifico&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Ultra&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Bangers&family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Fredoka:wght@300..700&family=Gloria+Hallelujah&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pacifico&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Ultra&display=swap');
 
 /* BOOTSTRAPE */
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
@@ -10,13 +10,34 @@
   padding: 0;
 }
 
+@media only screen and (max-width: 1250px) {
+  html {
+    font-size: 12px;
+  }
+}
+
+@media only screen and (max-width: 770px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+@media only screen and (min-width: 1550px) {
+  html {
+    font-size: 25px;
+  }
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer utilities{
   .nav-link{
-    @apply px-4 py-1 mx-3 font-thin text-2xl font-bang hover:bg-orange hover:text-white rounded-xl
+    @apply px-4 mx-2 font-thin text-2xl text-white font-fred hover:bg-yellow hover:text-brand rounded-xl
+  }
+  .mobile-nav-link{
+    @apply text-yellow w-full p-5 font-bang text-3xl 
   }
 
   .side-img{
@@ -28,6 +49,6 @@
   }
 
   .footer-link{
-    @apply py-2 px-3 mx-2 text-3xl bg-brand text-orange rounded-full
+    @apply  md:py-2 md:px-3 mx-1 md:mx-2 text-xl md:text-3xl md:bg-brand text-orange rounded-full
   }
 }
