--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,6 @@
 /* FONTS */
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Bangers&family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Fredoka:wght@300..700&family=Gloria+Hallelujah&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pacifico&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Ultra&display=swap');
 
-/* BOOTSTRAPE */
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
-
 *{
   margin: 0;
   padding: 0;
@@ -34,10 +31,10 @@
 
 @layer utilities{
   .nav-link{
-    @apply px-4 mx-2 font-thin text-2xl text-white font-fred hover:bg-yellow hover:text-brand rounded-xl
+    @apply px-4 mx-2 font-semibold text-2xl text-white font-fred hover:bg-yellow hover:text-brand
   }
   .mobile-nav-link{
-    @apply text-yellow w-full p-5 font-bang text-3xl 
+    @apply text-brown w-full p-5 font-bang text-3xl 
   }
 
   .side-img{
@@ -49,6 +46,6 @@
   }
 
   .footer-link{
-    @apply  md:py-2 md:px-3 mx-1 md:mx-2 text-xl md:text-3xl md:bg-brand text-orange rounded-full
+    @apply  md:py-2 md:px-3 mx-1 md:mx-2 text-xl md:text-3xl md:bg-brand text-yellow rounded-full
   }
 }
